Add a booklog for yesterday.

--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -213,3 +213,10 @@
     重要な言葉は複数の意味で使われることもあるが、読み手にわかるようはっきり使い分けているなら曖昧さを含まない。
     重要な言葉は単語・短い句・長い句で同じものが表されることもある。これはよりはっきりと読者に理解させたい意味を示す。
     この章の規則はちょっと難しいな。概ね何度も繰り返し使われる言葉だったりする気がしてたけど。技術書はそのへん曖昧な言い回し少なくて優しい部類なのかも。
+- date: 2024-10-21
+  bookTitle: People Powered 「ビジネス」「ブランド」「チーム」を変革するコミュニティの原則 遠くへ行きたければ、みんなで行け
+  pages: 286 ~ 318
+  notes: |
+    輪読会のやつ。今回は宿題。
+    日本語版解説と書いてるが当書籍のモデル Code for Japan に当てはめて説明してる。
+    あんま解説って感じではないかな。そういう一例だと思って読むのが良い。
