Add a book and a booklog for yesterday.

--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -220,3 +220,13 @@
     輪読会のやつ。今回は宿題。
     日本語版解説と書いてるが当書籍のモデル Code for Japan に当てはめて説明してる。
     あんま解説って感じではないかな。そういう一例だと思って読むのが良い。
+- date: 2024-10-21
+  bookTitle: 入門・倫理学
+  pages: 1 ~ 26
+  notes: |
+    輪読会のやつ。はじめに、とⅠ倫理学の基礎 1 章 倫理学の基礎。
+    現代的な倫理学の基本的な考え方について。
+    直観(感ではない)はそれだけで自明足りうるが、衝突する場合には理論的に解決する必要がある。
+    また直観は経験や常識に基づくため旧来の偏見を含むことがある。
+    合理的な倫理的判断は、事実と価値(観)を区別し、一貫性、公平性が必要となる。
+    おもしろい。日本の文脈に則した英米系の倫理学入門書という立ち位置みたい。あと BOX に書かれてる内容が本文で出た話を深めて良い。
