--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -20,3 +20,6 @@
 - id: how-to-read-a-book
   bookTitle: 本を読む本
   bookAuthor: Mortimer J. Adler, Charles Van Doren
+- id: introduction-to-ethics
+  bookTitle: 入門・倫理学
+  bookAuthor: 赤林朗, 児玉聡
