--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -230,3 +230,13 @@
     また直観は経験や常識に基づくため旧来の偏見を含むことがある。
     合理的な倫理的判断は、事実と価値(観)を区別し、一貫性、公平性が必要となる。
     おもしろい。日本の文脈に則した英米系の倫理学入門書という立ち位置みたい。あと BOX に書かれてる内容が本文で出た話を深めて良い。
+- date: 2024-10-22
+  bookTitle: 本を読む本
+  pages: 126 ~  143
+  notes: |
+    9 著者の伝えたいことは何か。
+    第 6 規則 もっとも重要な分を見つけ底の含まれる命題を見つける。命題を自分の言葉で表現できて初めて見つけたといえる。
+    第 7 規則 一連な分から基本的な論証を見つけ組み立てる。パラグラフ(日本語でいう段落でなく意味段落か)から論証が見つからない場合は命題を拾い集めて組み立てる必要がある。
+    著者自身の判断(肯定/否定)が 6 で、その理由が 7 。
+    第 8 規則 著者の解決が何であるかを検討する。解釈の 3 規則(第 5 ~ 7 の規則)から解決できたこと・ぶつかった課題・できなかったことを知る。
+    この 8,9 のセクションあんまピンときてなくてふわっとしてる。実際に本を読むときにここは〇〇で～みたいに意識的にしないと身にしみて感じられないかも。
