--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -240,3 +240,16 @@
     著者自身の判断(肯定/否定)が 6 で、その理由が 7 。
     第 8 規則 著者の解決が何であるかを検討する。解釈の 3 規則(第 5 ~ 7 の規則)から解決できたこと・ぶつかった課題・できなかったことを知る。
     この 8,9 のセクションあんまピンときてなくてふわっとしてる。実際に本を読むときにここは〇〇で～みたいに意識的にしないと身にしみて感じられないかも。
+- date: 2024-10-23
+  bookTitle: 本を読む本
+  pages: 144 ~  159
+  notes: |
+    10 本を正しく批評する。
+    分析読書の第三段階。批評。批評の第 1 規則。本を理解したと確実に言え、そのうえで賛成・反対・判断保留の立場を明らかにする。
+    批評の第 2 規則。反論は筋道を立ててすること。けんか腰は良くない。
+    批評の第 3 規則。反論は解消できるものだと考えること。
+    読書は著者との対話であるので、最低限理解して著者と同じ目線まで登ってからでないと対話にならない。
+    「わからない」も批評的判断だが、単に読み方が悪いだけだったり、その本だけで理解が難しいこともある。
+    読書の成功は知識を得ることにあり、その目的を見失わないこと。誤解と無知による反論がほとんどである。
+    賛成・反対・判断保留にしてもその根拠を示さねばならない。
+    まじめにちゃんと読み込んで誠意を持って批評しろよって感じか。
