--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -253,3 +253,12 @@
     読書の成功は知識を得ることにあり、その目的を見失わないこと。誤解と無知による反論がほとんどである。
     賛成・反対・判断保留にしてもその根拠を示さねばならない。
     まじめにちゃんと読み込んで誠意を持って批評しろよって感じか。
+- date: 2024-10-24
+  bookTitle: 本を読む本
+  pages: 160 ~ 176
+  notes: |
+    11 著者に賛成するか反論するか。
+    反論や判断保留の詳細を述べてる。    反論の根拠として、知識不足・誤認識・推論間違いを示すか、或いは全体的な分析の不完全を明らかにする。
+    前者のいずれの根拠もなければ、即ちそれは著者の意見にある程度賛成しなければならない。
+    反論の根拠のケースを挙げると、新事実による情報の陳腐化や、著者自身の時代背景によるバイアス等。
+    そして分析読書の規則のまとめ。この箇条書き便利やけどもっと早く気づきたかったな。点検読書してたら見つけてたなコレ。
