--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -262,3 +262,12 @@
     前者のいずれの根拠もなければ、即ちそれは著者の意見にある程度賛成しなければならない。
     反論の根拠のケースを挙げると、新事実による情報の陳腐化や、著者自身の時代背景によるバイアス等。
     そして分析読書の規則のまとめ。この箇条書き便利やけどもっと早く気づきたかったな。点検読書してたら見つけてたなコレ。
+- date: 2024-10-25
+  bookTitle: 本を読む本
+  pages: 177 ~ 180
+  notes: |
+    12 読書の補助手段。
+    読書に、ある本一冊だけを読む本質的読書と他の助けを借りる付帯的読書とする。これまでの規則は前者に適応される。
+    しかし誰しもそれまでに読んだ本や経験からの知識があるので、全くの本質読書はない。
+    経験には日常で得られる普通経験と科学実験のような限られたシーンでしか得られない特殊経験がある。これらは本の種類に応じて関わりが違う。
+    経験で以て評価するってのは特に手法を説くタイプの技術書に対してよくやるな。結局どっかの誰かの持論なので経験が増えるほどそういう本は批評しやすくなる。
