--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -23,3 +23,7 @@
 - id: introduction-to-ethics
   bookTitle: 入門・倫理学
   bookAuthor: 赤林朗, 児玉聡
+- id: scotch-whisky-course-for-men
+  bookTitle: 男のスコッチウィスキー講座 100 蒸留所 巡礼試飲旅
+  bookAuthor: 和智英樹, 高橋矩彦
+  previouslyRead: true
