--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -271,3 +271,9 @@
     しかし誰しもそれまでに読んだ本や経験からの知識があるので、全くの本質読書はない。
     経験には日常で得られる普通経験と科学実験のような限られたシーンでしか得られない特殊経験がある。これらは本の種類に応じて関わりが違う。
     経験で以て評価するってのは特に手法を説くタイプの技術書に対してよくやるな。結局どっかの誰かの持論なので経験が増えるほどそういう本は批評しやすくなる。
+- date: 2024-10-26
+  bookTitle: 男のスコッチウィスキー講座 100 蒸留所 巡礼試飲旅
+  pages: 152 ~ 253
+  notes: |
+    少し前に Angus Dundee 社の The Double Peat って酒を手に入れたのだけど、アイラとスペイサイドのブレンドらしく、スペイサイドのピーテッドモルトって何だ？と思ってリファレンスとして調べた。
+    結局わからなかったが。この本はこの本でとてもおもしろいので価値はあるのだけど、 10 年以上前に買ったやつだし、より網羅的な定番の本も欲しいなと思った。
