--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -277,3 +277,13 @@
   notes: |
     少し前に Angus Dundee 社の The Double Peat って酒を手に入れたのだけど、アイラとスペイサイドのブレンドらしく、スペイサイドのピーテッドモルトって何だ？と思ってリファレンスとして調べた。
     結局わからなかったが。この本はこの本でとてもおもしろいので価値はあるのだけど、 10 年以上前に買ったやつだし、より網羅的な定番の本も欲しいなと思った。
+- date: 2024-10-27
+  bookTitle: 本を読む本
+  pages: 180 ~ 196
+  notes: |
+    12 読書の補助手段。
+    付帯的読書。名著が前の時代の知識を引き継ぐ大きな流れの一部ってのは、技術書でも同じやな。
+    注釈書や抜粋はチートたりうるため読者自身の思考の機会を奪う可能性がある。
+    辞書・百科事典は知識の補完に使うが、使うには良い方を知っていたり質問できる知識が必要になる。
+    今どきだとわからない言葉に対しては検索で済ますこと多いな、と思った。
+    表面的な理解になるからそこは物理・電子の参考図書でも同じか。
