--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -287,3 +287,13 @@
     辞書・百科事典は知識の補完に使うが、使うには良い方を知っていたり質問できる知識が必要になる。
     今どきだとわからない言葉に対しては検索で済ますこと多いな、と思った。
     表面的な理解になるからそこは物理・電子の参考図書でも同じか。
+- date: 2024-10-28
+  bookTitle: 本を読む本
+  pages: 197 ~ 208
+  notes: |
+    13 小説・戯曲・詩の読み方。
+    文学を読むのは教養書を読むのより難しい。なぜ面白かったかを知るのが難しい。
+    ある意味積極的な受け身でもって感動を妨げぬよう「文学の影響力に抵抗してはならない」
+    また教養書と同じ接し方で「分析してはならなず」、同じ尺度で「批判してはならない」。
+    とはいえ教養書と同じ規則が適用できる点もある。
+    カテゴリ・あらすじ・全体の構成の把握や解釈、作品を楽しんだうえで批判する努力など。
