--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -297,3 +297,12 @@
     また教養書と同じ接し方で「分析してはならなず」、同じ尺度で「批判してはならない」。
     とはいえ教養書と同じ規則が適用できる点もある。
     カテゴリ・あらすじ・全体の構成の把握や解釈、作品を楽しんだうえで批判する努力など。
+- date: 2024-10-29
+  bookTitle: 本を読む本
+  pages: 208 ~ 218
+  notes: |
+    13 小説・戯曲・詩の読み方。
+    小説はなるべく短時間に没入して読んだほうが良い。現実を離れその世界を経験するところに意義がある。
+    戯曲も同じ様に読むべきだが、舞台を前提としている点で小説のような背景の描写がないので、想像力が求められる。
+    戯曲も詩も声に出してみると良い。リズムや韻を通して理解できるものがある。
+    大人になってから戯曲とか詩とか読んだことないわ。挑戦してみるか。
