--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -306,3 +306,11 @@
     戯曲も同じ様に読むべきだが、舞台を前提としている点で小説のような背景の描写がないので、想像力が求められる。
     戯曲も詩も声に出してみると良い。リズムや韻を通して理解できるものがある。
     大人になってから戯曲とか詩とか読んだことないわ。挑戦してみるか。
+- date: 2024-10-30
+  bookTitle: 本を読む本
+  pages: 219 ~ 227
+  notes: |
+    14 シントピカル読書―読書の第 4 レベル。
+    1 つの主題を定めることの難しさ。曖昧な同一主題をはっきりするためにもまず読書量が必要になる。
+    ここで点検読書をすることで短い時間で主題に関連した書物を見つけることができる。
+    技術書の場合、ある意味点検しやすいのかもな。自分の経験でだ身がしょぼい本を「点検」時に見分けれたことないのは多分スキル不足かな。
