--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -314,3 +314,12 @@
     1 つの主題を定めることの難しさ。曖昧な同一主題をはっきりするためにもまず読書量が必要になる。
     ここで点検読書をすることで短い時間で主題に関連した書物を見つけることができる。
     技術書の場合、ある意味点検しやすいのかもな。自分の経験でだ身がしょぼい本を「点検」時に見分けれたことないのは多分スキル不足かな。
+- date: 2024-10-31
+  bookTitle: 本を読む本
+  pages: 227 ~ 235
+  notes: |
+    14 シントピカル読書―読書の第 4 レベル。
+    シントピカル読書の5つの段階。関連箇所を見つける。著者に折り合いをつける。質問を明確にする。論点を定める。主題についての論考を分析する。
+    分析読書とシントピカル読書で違うのは主体が読者にあること。読者の言葉で著者の理解を顕し、読者の問いに対する著者の答えから論点を見出し、その論考を分析する。
+    分析の中で意見が対立するとき、独善的に答えを判断しようとするのでなく、客観的で公平な立場でもって分析しなければならない。これが難しいと。
+    著者の言葉を自分の言葉に翻訳する時に読み違えるなよってことと思うが、読み込むこと以外でどうバイアスを除くかは難しいよな。
