--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -7,3 +7,12 @@
     読者の問に即した方をより意味を明確にした読者の言葉で表現したグループとしてとらえ、その中での論争に注目する。
     そしてシントピカル読書の手引としてのシントピコン(The Great Books of the Western World)。これ和訳ないのが残念よな。
     西欧の思想というか概念の索引ぽいし、現代的な思想の源流を知るのに絶対いいやろ。
+- date: 2024-11-02
+  bookTitle: 本を読む本
+  pages: 241 ~ 246
+  notes: |
+    14 シントピカル読書―読書の第 4 レベル。
+    著者の言葉を読者の言葉に翻訳することを良しとしない反対派への反論みたいな感じ。
+    書籍が正確で読者によって翻訳可能あれば書籍同士は「語り合う」ことができ理性的なコミュニケーションは可能だというのを「原理」と指しているぽい。
+    なんとなく、書籍は著者・その時代背景や言語の違いがあろうが誤読のない限りは読者の言葉で表現されて然るべきだろうから、反対派の方が的外れな気はするな。
+    そしてシントピカル読書の段階のまとめの便利な一覧。
