--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -16,3 +16,12 @@
     書籍が正確で読者によって翻訳可能あれば書籍同士は「語り合う」ことができ理性的なコミュニケーションは可能だというのを「原理」と指しているぽい。
     なんとなく、書籍は著者・その時代背景や言語の違いがあろうが誤読のない限りは読者の言葉で表現されて然るべきだろうから、反対派の方が的外れな気はするな。
     そしてシントピカル読書の段階のまとめの便利な一覧。
+- date: 2024-11-03
+  bookTitle: 本を読む本
+  pages: 247 ~ 255
+  notes: |
+    15 読書と精神の成長。残すはあとがきのフリしたエッセイぽいので、実質この章で終わり。
+    良書は読者に多くを求め、積極的な読者も自身に多くを求める。良書は多少難しかろうが脳が衰えない限り読者の成長に寄与する。
+    そのような本は希少であり、読むたびに新しい発見がある。この限られた良書がシントピコンにつながるわけやな。
+    個人的に定期的に読み返す本はあるが、それがシントピコンになるかはわからんな。
+    アカデミックな読み方を修練するしないに関わらず、本を読み続ける習慣の後押しになった気がする。
