--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -25,3 +25,11 @@
     そのような本は希少であり、読むたびに新しい発見がある。この限られた良書がシントピコンにつながるわけやな。
     個人的に定期的に読み返す本はあるが、それがシントピコンになるかはわからんな。
     アカデミックな読み方を修練するしないに関わらず、本を読み続ける習慣の後押しになった気がする。
+- date: 2024-11-04
+  bookTitle: 本を読む本
+  pages: 256 ~ 265
+  notes: |
+    日本人の読書 - 訳者あとがきにかえて。あとがきのフリしたエッセイ。
+    短編を行ったり来たりして読む、訳書が悪文でも何度も読み込む。そのため読書技術が発展しなかったといった日本的な読書の特徴について触れられてた。
+    ただ時代の変化でそのような技術が有用であろう、という締め。なんか感想文チック。読書技術が発展しなかった背景でどう向き合うかみたいな話ではないんか。
+    読後の感覚的には、(まともな)技術書やビジネス書に限れば読書技術が活かせる気もするので、独学で実践するしかないか。
