--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -27,3 +27,6 @@
   bookTitle: 男のスコッチウィスキー講座 100 蒸留所 巡礼試飲旅
   bookAuthor: 和智英樹, 高橋矩彦
   previouslyRead: true
+- id: property-based-testing
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  bookAuthor: Fred Hebert
