--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -40,3 +40,12 @@
     前から FsCheck を使いたいと考えてたが手探りすぎたのでなんか手引が欲しく、ちょうど良さそうな本が出たので積読してた。
     少なくとも和書だと PBT について書いてるのがこの本しかないっぽいし。
     はじめ PBT 基礎を習って、その後は演習等実践を通して理解を進めていくみたい。良さそうや。
+- date: 2024-11-06
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 1 ~ 11
+  notes: |
+    第一章 プロパティベーステストの基礎。
+    プロパティベーステストは従来のテストと根本的にアプローチが異なる。
+    従来のテストは事例を並べるが、プロパティベーステストは「どのような入力を与えても常に同じであるような振る舞い」≒プロパティを定義する。
+    プロパティベーステストが適さないケースもあり、従来のテストより考えることが多くなり技能も必要だが、素晴らしい結果をもたらしてくれるって感じか。
+    事例ベースのテストは想像の範囲の仕様を記述するが、プロパティベーステストは想像の失敗をあぶり出す。そうそう、それこそ求めてるものよ。
