--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -44,7 +44,7 @@
   bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
   pages: 1 ~ 11
   notes: |
-    第一章 プロパティベーステストの基礎。
+    第 1 章 プロパティベーステストの基礎。
     プロパティベーステストは従来のテストと根本的にアプローチが異なる。
     従来のテストは事例を並べるが、プロパティベーステストは「どのような入力を与えても常に同じであるような振る舞い」≒プロパティを定義する。
     プロパティベーステストが適さないケースもあり、従来のテストより考えることが多くなり技能も必要だが、素晴らしい結果をもたらしてくれるって感じか。
