--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -49,3 +49,11 @@
     従来のテストは事例を並べるが、プロパティベーステストは「どのような入力を与えても常に同じであるような振る舞い」≒プロパティを定義する。
     プロパティベーステストが適さないケースもあり、従来のテストより考えることが多くなり技能も必要だが、素晴らしい結果をもたらしてくれるって感じか。
     事例ベースのテストは想像の範囲の仕様を記述するが、プロパティベーステストは想像の失敗をあぶり出す。そうそう、それこそ求めてるものよ。
+- date: 2024-11-07
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 11 ~ 18
+  notes: |
+    第 1 章 プロパティベーステストの基礎。
+    従来のテストは単純なツールと多くのコード。 PBT は強力なツールと少しのコード化されたルール。
+    そのためツールの支援がなければ話にならんということで本で使うツールの紹介。
+    .NET もテストプロジェクトを分離するし FsCheck も同じ感じでやれそうやな。
