--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -57,3 +57,11 @@
     従来のテストは単純なツールと多くのコード。 PBT は強力なツールと少しのコード化されたルール。
     そのためツールの支援がなければ話にならんということで本で使うツールの紹介。
     .NET もテストプロジェクトを分離するし FsCheck も同じ感じでやれそうやな。
+- date: 2024-11-08
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 19 ~ 25
+  notes: |
+    第 2 章 プロパティを書く。
+    コード化されたルール、ジェネレータ、フレームワークが揃ってプロパティが得られる。
+    PBT には基礎的なステートレスプロパティとより複雑なステートフルプロパティがある。
+    あとは PropEr の使い方とか。後ほど FsCheck ではというあたりも自習しておく。
