--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -65,3 +65,12 @@
     コード化されたルール、ジェネレータ、フレームワークが揃ってプロパティが得られる。
     PBT には基礎的なステートレスプロパティとより複雑なステートフルプロパティがある。
     あとは PropEr の使い方とか。後ほど FsCheck ではというあたりも自習しておく。
+- date: 2024-11-09
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 25 ~ 36
+  notes: |
+    第 2 章 プロパティを書く。
+    備え付けジェネレータとコード化したルールを組み合わせてどテストを書くかってところ。
+    最初はサクッと書いてその結果からジェネレータを変える等プロパティを調整してく。
+    結構試行錯誤な印象。あとこの段階では組み込みのジェネレータ知らんことにはどうにもならなそう。
+    使うツールに習熟する必要あるって話の片鱗かな。
