--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -74,3 +74,13 @@
     最初はサクッと書いてその結果からジェネレータを変える等プロパティを調整してく。
     結構試行錯誤な印象。あとこの段階では組み込みのジェネレータ知らんことにはどうにもならなそう。
     使うツールに習熟する必要あるって話の片鱗かな。
+- date: 2024-11-10
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 36 ~ 46
+  notes: |
+    第 3 章 プロパティで考える。
+    優れたプロパティの実装は標準的なテストよりも難しいが、習熟するためのテクニックはある。
+    まずモデル化。単純で正しいと信用できる代替の実装。実行速度に問題があったとしても初手としては意味がある。
+    複数の実装パターンがない場合には従来のテストケースの汎化をする。どこまでを信頼するかは開発者の判断。
+    次に小さく分解した部分で常に真となるはずの不変条件を使う。単一の不変条件だと役に立たなくても他の部分の不変条件と組み合わせで信用を高められる。
+    テクニックがあるとはいえこの辺は実装しつつ習熟するしかないやろな。
