--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -84,3 +84,14 @@
     複数の実装パターンがない場合には従来のテストケースの汎化をする。どこまでを信頼するかは開発者の判断。
     次に小さく分解した部分で常に真となるはずの不変条件を使う。単一の不変条件だと役に立たなくても他の部分の不変条件と組み合わせで信用を高められる。
     テクニックがあるとはいえこの辺は実装しつつ習熟するしかないやろな。
+- date: 2024-11-11
+  bookTitle: 入門・倫理学
+  pages: 27 ~ 35
+  notes: |
+    輪読会のやつ。Ⅰ倫理学の基礎 第 2 章 倫理理論。
+    倫理理論というツールを使うことで直観的に難しい場面での合理的な判断を補助する。
+    規範倫理学→帰結主義→功利主義。
+    帰結主義は良い結果で良し悪しを判断する立場であり、功利主義の良い結果とは関係者の幸福。
+    功利の原理と結果で判断する行為功利主義の限界を修正するために道徳規則を追加した規則原理主義。
+    二層理論では直観レベルと批判レベルの二段階で判断する。
+    多分ザクッと理解する意図の章なので用語を覚えるのからスタートかな。
