--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -95,3 +95,12 @@
     功利の原理と結果で判断する行為功利主義の限界を修正するために道徳規則を追加した規則原理主義。
     二層理論では直観レベルと批判レベルの二段階で判断する。
     多分ザクッと理解する意図の章なので用語を覚えるのからスタートかな。
+- date: 2024-11-11
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 46 ~ 53
+  notes: |
+    第 3 章 プロパティで考える。
+    正順の処理に対して逆順の処理を書ける場合はそれが対称プロパティとなる。
+    対称プロパティそれだけでは整合性を保証するのみだが、不変条件を組み合わせることで強固なプロパティが得られる。
+    コツとして、複雑な処理をプロパティ 1 つだけで信頼性を高めようとせず、複数のプロパティに分けて段階的に検証していくのが望ましい。
+    この辺は従来のテストと同じかな。
