--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -104,3 +104,12 @@
     対称プロパティそれだけでは整合性を保証するのみだが、不変条件を組み合わせることで強固なプロパティが得られる。
     コツとして、複雑な処理をプロパティ 1 つだけで信頼性を高めようとせず、複数のプロパティに分けて段階的に検証していくのが望ましい。
     この辺は従来のテストと同じかな。
+- date: 2024-11-12
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 54 ~ 64
+  notes: |
+    第 4 章 カスタムジェネレーター。
+    まんべんなくランダムなデータでは発見できると限らない。
+    限られたエッジケースに焦点を絞るようなテストに最適なデータを、カスタムジェネレータで生成する。
+    まず統計情報をとりデフォルトジェネレータで生成された値がテストに十分か見極め、不十分ならカスタムジェネレータを利用する。
+    カスタムのデータ生成はそら欲しくなるよなという印象。
