--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -124,3 +124,13 @@
     生成・変換のいずれにしても効率的に欲しいデータを生成するには十分でなく、その場合確率を調整して狙いのデータに近づけることもできる。
     ただし CSV や XML のような構造化データの生成には十分でないため更にテクニックがいる。
     ここまできたら実際にテスト対象に必要なデータを試行錯誤するのが実践的で良さそうやな。勘所は練習しないとつかめなさげ。
+- date: 2024-11-14
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 76 ~ 84
+  notes: |
+    第 4 章 カスタムジェネレーター。
+    再帰ジェネレーター。 繰り返しで作れるデータは概ね可能。
+    ただし正格評価で呼び出し階層が深くなりすぎる場合があり、そのときは遅延評価することで回避する。
+    確率的に再帰の終了条件を設定する場合、確率が固定されたり異常なサイズのデータが生成されることもある。
+    その場合繰り返し回数だけランダムに生成して、データの生成を通常の関数で記述することで軽くできる。
+    Erlang 力低くてピンとこんが正確評価は FsCheck も同じだし、他のエッセンスも似たようなもんだろうと推測する。
