--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -134,3 +134,11 @@
     確率的に再帰の終了条件を設定する場合、確率が固定されたり異常なサイズのデータが生成されることもある。
     その場合繰り返し回数だけランダムに生成して、データの生成を通常の関数で記述することで軽くできる。
     Erlang 力低くてピンとこんが正確評価は FsCheck も同じだし、他のエッセンスも似たようなもんだろうと推測する。
+- date: 2024-11-15
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 84 ~ 92
+  notes: |
+    第 4 章 カスタムジェネレーター。
+    シンボリックコール。失敗したプロパティの出力が解読不能なバイト列などのデータ形式の場合に使える。
+    関数呼び出しやその引数をシンボルとして記録し、失敗時にその履歴が追跡できる感じ。
+    FsCheck にはシンボリックコールそのものはないみたい。それっぽいものを代替手段で実装することはできそうなので参考にはなるか。
