--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -142,3 +142,14 @@
     シンボリックコール。失敗したプロパティの出力が解読不能なバイト列などのデータ形式の場合に使える。
     関数呼び出しやその引数をシンボルとして記録し、失敗時にその履歴が追跡できる感じ。
     FsCheck にはシンボリックコールそのものはないみたい。それっぽいものを代替手段で実装することはできそうなので参考にはなるか。
+- date: 2024-11-16
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 93 ~ 111
+  notes: |
+    第 5 章 信頼できるテスト。
+    これまで学んだ内容を実践する。
+    モデル化、事例テストの汎用化、不変条件、対象プロパティと事例テストによる固定化(anchor 錨)。
+    ここでは CSV のプロパティを書くためにまずジェネレータからかいてるが、仕様のコード化という点で TDD に通じる。
+    プロパティを定義するとその仕様の曖昧さが生み出すというのもいいな。
+    避けられない既知のバグを正解ケースとして、またプロパティの実装上避けられない暗黙の仕様のテストも事例テストが向いてる。
+    こういう事例テストの用途はリグレッションテストも該当する。
