--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -153,3 +153,11 @@
     プロパティを定義するとその仕様の曖昧さが生み出すというのもいいな。
     避けられない既知のバグを正解ケースとして、またプロパティの実装上避けられない暗黙の仕様のテストも事例テストが向いてる。
     こういう事例テストの用途はリグレッションテストも該当する。
+- date: 2024-11-17
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages:111 ~ 121
+  notes: |
+    第 5 章 信頼できるテスト。
+    PBT のアイデアを使った事例テスト。
+    総当たりの範囲が狭く実行時間も許容できる場合は PBT より事例を列挙するほうが良いケースもある。
+    この場合原因の追跡のしやすさは劣るが、実例が網羅されるためランダム性は必要なくより信頼性も高くなる。
