--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -161,3 +161,10 @@
     PBT のアイデアを使った事例テスト。
     総当たりの範囲が狭く実行時間も許容できる場合は PBT より事例を列挙するほうが良いケースもある。
     この場合原因の追跡のしやすさは劣るが、実例が網羅されるためランダム性は必要なくより信頼性も高くなる。
+- date: 2024-11-18
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 121 ~ 136
+  notes: |
+    第 5 章 信頼できるテスト。
+    ココまでで出尽くしてるかのようで特に気づく点なかった。
+    FsCheck で同じような実習してみるのが練習になりそうやけどまだやってない。
