--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -168,3 +168,12 @@
     第 5 章 信頼できるテスト。
     ココまでで出尽くしてるかのようで特に気づく点なかった。
     FsCheck で同じような実習してみるのが練習になりそうやけどまだやってない。
+- date: 2024-11-19
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 137 ~ 144
+  notes: |
+    第 6 章 プロパティ駆動開発。
+    TDD と同じように PDD する。
+    ポジティブテスト(テストがスべきことの検証)とネガティブテスト(プログラムが処理できないことのテスト)の技法を探っていく。
+    最初に簡単なプロパティを書き、それを green にするために最小実装、実装後統計を見て妥当性のチェック。
+    プロパティ書いてジェネレータを書いて実装してって流れは F# だとコンパイルエラーうざそうで先に空実装しちゃいそう。 TDD もなんか苦手やし。
