--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -177,3 +177,13 @@
     ポジティブテスト(テストがスべきことの検証)とネガティブテスト(プログラムが処理できないことのテスト)の技法を探っていく。
     最初に簡単なプロパティを書き、それを green にするために最小実装、実装後統計を見て妥当性のチェック。
     プロパティ書いてジェネレータを書いて実装してって流れは F# だとコンパイルエラーうざそうで先に空実装しちゃいそう。 TDD もなんか苦手やし。
+- date: 2024-11-20
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 144 ~ 151
+  notes: |
+    第 6 章 プロパティ駆動開発。
+    1つ目のプロパティでカバーできなかったケースのテストを新たに作る。複雑化しないように小分けにする。
+    これはジェネレーターも同じで、テストしたいパターンを構成する最小の要素のジェネレーターを作る。
+    それらを組み合わせて複雑なパターンを網羅する。
+    ここまでは想像の範囲で期待の挙動をするかテストするポジティブテスト(ハッピーテスト)。次節からネガティブテスト。
+    単純で本実装とは違う形で実装ってのが結構むずそうよなーやり方は色々あるってのはわかるんやけどバイアスかかりそう。
