--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -187,3 +187,13 @@
     それらを組み合わせて複雑なパターンを網羅する。
     ここまでは想像の範囲で期待の挙動をするかテストするポジティブテスト(ハッピーテスト)。次節からネガティブテスト。
     単純で本実装とは違う形で実装ってのが結構むずそうよなーやり方は色々あるってのはわかるんやけどバイアスかかりそう。
+- date: 2024-11-21
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 156 ~ 169
+  notes: |
+    第 6 章 プロパティ駆動開発。
+    ネガティブテスト。不測のケースを探るのには広範囲を対称とする曖昧なプロパティが適している。
+    完全にランダムだと満遍なく事例をカバーしにくいので、意図的に予測可能なデータを混ぜていき、ばらつきが狙い通りかは統計情報で評価していく。
+    またポジティブテストの制約を緩めることで不測のケースを探索するのも良い。
+    この不測のケースの中には動的型付け言語だから起こり得るものがあり、静的型付け言語の場合だと厳しく型で制約しているから起こり得ないものもある。
+    とはいえちょいちょい制約子忘れるのでそういった漏れを発見できるかもしれないのは大きそうな。
