--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -197,3 +197,13 @@
     またポジティブテストの制約を緩めることで不測のケースを探索するのも良い。
     この不測のケースの中には動的型付け言語だから起こり得るものがあり、静的型付け言語の場合だと厳しく型で制約しているから起こり得ないものもある。
     とはいえちょいちょい制約子忘れるのでそういった漏れを発見できるかもしれないのは大きそうな。
+- date: 2024-11-22
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 170 ~ 184
+  notes: |
+    第 7 章 収縮。
+    失敗したケースを再現する最も簡単な形を探す機構が収縮(shrinking)。
+    最も簡単な形はジェネレーターにとってのゼロ点、概ね空を指す値だったり中間点を指す。
+    特殊なケースは例えば初期位置が定まっているデータ。 Unix タイムスタンプであれば 1970 年 1 月 1 日。
+    このようなデータ構造が複雑な場合は簡単な形が得られないこともあり、その場合は収縮機能を制御する機構を使う。
+    PropEr はマクロだけど FsCheck だと shrinker という `seq` を返す関数で表現してるみたい(まだ試してない)
