--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -207,3 +207,13 @@
     特殊なケースは例えば初期位置が定まっているデータ。 Unix タイムスタンプであれば 1970 年 1 月 1 日。
     このようなデータ構造が複雑な場合は簡単な形が得られないこともあり、その場合は収縮機能を制御する機構を使う。
     PropEr はマクロだけど FsCheck だと shrinker という `seq` を返す関数で表現してるみたい(まだ試してない)
+- date: 2024-11-23
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 185 ~ 192
+  notes: |
+    第 8 章 標的型プロパティ。
+    通常のプロパティは各ケースが独立しているが標的型プロパティは後続のケースのデータ生成に影響を与えることができる。
+    それにより特別なジェネレータを作ることなく標準的なジェネレータで狙ったデータを生成できる。
+    標準的型プロパティは焼きなまし法(Simulated Annealing)という統計的な手法で値を探す。
+    初期は山登り法(Hill Climbibg)が利用された。元は探索マクロとして追加された機能。
+    PropEr の進んだ昨日だけあって FsCheck には Targeted Property なさそうなのでそういう手法もあるのかという程度の理解。
