--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -217,3 +217,13 @@
     標準的型プロパティは焼きなまし法(Simulated Annealing)という統計的な手法で値を探す。
     初期は山登り法(Hill Climbibg)が利用された。元は探索マクロとして追加された機能。
     PropEr の進んだ昨日だけあって FsCheck には Targeted Property なさそうなのでそういう手法もあるのかという程度の理解。
+- date: 2024-11-24
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 192 ~ 200
+  notes: |
+    第 8 章 標的型プロパティ。
+    標的型プロパティで狙いたいのはエッジケース、例えば木構造が片方に偏ってるとかがあってる。
+    焼きなまし法の計算時間で明らかに通常のジェネレータより遅くなる。
+    独自に近傍関数を定義することでより効果的な選択をさせることができる。
+    ただしカスタムジェネレータで狙いのデータを生成するのと同様、ランダムさは狭まる。
+    このことからも満遍なく多様なデータのプロパティとは分けて考えるべきところなんかな。
