--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -30,3 +30,6 @@
 - id: property-based-testing
   bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
   bookAuthor: Fred Hebert
+- id: wei-wu-zhu-sun-tzu
+  bookTitle: 魏武注孫子
+  bookAuthor: 曹操, 渡邉義浩
