--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -227,3 +227,11 @@
     独自に近傍関数を定義することでより効果的な選択をさせることができる。
     ただしカスタムジェネレータで狙いのデータを生成するのと同様、ランダムさは狭まる。
     このことからも満遍なく多様なデータのプロパティとは分けて考えるべきところなんかな。
+- date: 2024-11-25
+  bookTitle: 魏武注孫子
+  pages: 1 ~ 10
+  notes: |
+    面白そうだったんで買った。孫子を複数のテキストから定本したのは曹操だという。
+    そのため曹操の軍事思想を理解しなければ孫子を真に理解するのは難しい。
+    その思想の背景を知ることは、当時の人がどのように理解し実践していたかを知ること。
+    曹操はあくまで訓詁学に基づいた注釈を行っていたというのも興味深いな。読書家なんや。
