--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -235,3 +235,11 @@
     そのため曹操の軍事思想を理解しなければ孫子を真に理解するのは難しい。
     その思想の背景を知ることは、当時の人がどのように理解し実践していたかを知ること。
     曹操はあくまで訓詁学に基づいた注釈を行っていたというのも興味深いな。読書家なんや。
+- date: 2024-11-25
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 200 ~ 204
+  notes: |
+    第 8 章 標的型プロパティ。
+    標的型プロパティの独創的な使い方として通常のプロパティではできない使い方がある。
+    例えば計算量が爆発して実行時間が伸びるようなケースは、実行時間が最大化する方向にでー他を探す必要があり、通常脳プロパティではできない。
+    標的型プロパティは仕様やロジックの穴を探すのに特に光るものがある印象。
