--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -243,3 +243,14 @@
     標的型プロパティの独創的な使い方として通常のプロパティではできない使い方がある。
     例えば計算量が爆発して実行時間が伸びるようなケースは、実行時間が最大化する方向にでー他を探す必要があり、通常脳プロパティではできない。
     標的型プロパティは仕様やロジックの穴を探すのに特に光るものがある印象。
+- date: 2024-11-25
+  bookTitle: 入門・倫理学
+  pages: 35 ~ 44
+  notes: |
+    輪読会のやつ。Ⅰ倫理学の基礎 第 2 章 倫理理論。
+    義務論(deontology)または義務にもとづく理論(duty-based theory)。
+    正しい・正しくない行動のタイプ≒義務によって行動を制約される義務論敵制約。
+    カントの倫理学では、義務にかなっているだけの行為は適法性があるだけで、道徳性はないとみなす 。
+    定言命法・人間の尊厳・自立としての自由でもって義務を特定できるとした。
+    ロスの倫理学は一応の義務で義務の衝突を回避できるとした。
+    ロールズは功利主義の欠陥は幸福の配分に触れられていないこととし、社会契約説によって配分の原理を構築できるとした。
