--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -264,3 +264,14 @@
     「兵は斯道」戦争は即ち騙し合いであり人として正しいことが勝利に繋がらない。戦争を所与の条件とし敵の備えのない不意をつき必ず勝利を導かねばならないという主張。
     「廟算」戦争における勝ちを定めることの重要性を説き、勝利は合理的に導けるものであるという主張。
     2 頁しか読んでないが一旦ここで区切るが良いか。
+- date: 2024-11-26
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 205 ~ 212
+  notes: |
+    第 9 章 ステートフルプロパティ。
+    ステートフルプロパティが有効なのは「コードが何をすべきかは単純だが実装が複雑」なパターン。従来の結合テストやシステムテストが該当する。
+    形式手法未満のモデル検査の亜種といえる(らしいがわからん)。
+    モデル・コマンドのジェネレーター・実際のシステムの 3 つのパーツで成り立つ。
+    システムの振る舞いモデルと検証対象のシステムに、検証対象の操作をあらわす前提条件を与え、モデルと検証対象のシステムを事後条件により確かめる。みたいな感じか。
+    こういう仕組みは、自動じゃないけど今 pocof の `SelectPocofCommand` にやってるテストと同じ感じなので、熟達したらかなりイケそうな気がしてきた。
+    FsCheck 的には Model-based Testing なんかな。
