--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -275,3 +275,13 @@
     システムの振る舞いモデルと検証対象のシステムに、検証対象の操作をあらわす前提条件を与え、モデルと検証対象のシステムを事後条件により確かめる。みたいな感じか。
     こういう仕組みは、自動じゃないけど今 pocof の `SelectPocofCommand` にやってるテストと同じ感じなので、熟達したらかなりイケそうな気がしてきた。
     FsCheck 的には Model-based Testing なんかな。
+- date: 2024-11-27
+  bookTitle: 魏武注孫子
+  pages: 12 ~ 17
+  notes: |
+    始計篇 第一。(本来は計篇だった可能性が高い)
+    まず孫子の原則として、1.戦わずして勝つを理想とする、2.戦争の基本的性格を詭道とする、3. 戦争を合理的に解釈するの 3 つがある。
+    これらにより、合理的な勝敗の予測、戦争が経済を滅ぼす実践的な説明、戦争を解明しようと試み、現代にも通づる普遍的な組織論といった特徴を持つ。
+    「兵は国の大事」戦争は国の存亡を左右するので良く洞察しなければならない。五事七計でもって勝敗を予測する。
+    「五事」戦力を道(民心)・天(時期)・地(地理的優位性)・将(将の能力)・法(軍事力や権力)で測る。みたいなところか？
+    面白いが読み解くのがなかなか難しいな。
