--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -261,7 +261,7 @@
     まず孫子と始計篇 第一の概要。孫子は孫武の主張を中核とするが、それを奉ずる学派の共有テキストでもあり、整合性に欠く面もある。
     始計篇は比較的まとまっていて、本書では便宜的に段落を分けて読解を導いてくれる。
     「兵は国の大事」「五事」「七計」「将の任免」「計と勢」、ここまでが戦争は国家存亡の分かれ道であるから合理的に判断し勝利を導かねばならないという主張。
-    「兵は斯道」戦争は即ち騙し合いであり人として正しいことが勝利に繋がらない。戦争を所与の条件とし敵の備えのない不意をつき必ず勝利を導かねばならないという主張。
+    「兵は詭道」戦争は即ち騙し合いであり人として正しいことが勝利に繋がらない。戦争を所与の条件とし敵の備えのない不意をつき必ず勝利を導かねばならないという主張。
     「廟算」戦争における勝ちを定めることの重要性を説き、勝利は合理的に導けるものであるという主張。
     2 頁しか読んでないが一旦ここで区切るが良いか。
 - date: 2024-11-26
