--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -285,3 +285,12 @@
     「兵は国の大事」戦争は国の存亡を左右するので良く洞察しなければならない。五事七計でもって勝敗を予測する。
     「五事」戦力を道(民心)・天(時期)・地(地理的優位性)・将(将の能力)・法(軍事力や権力)で測る。みたいなところか？
     面白いが読み解くのがなかなか難しいな。
+- date: 2024-11-27
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 212 ~ 217
+  notes: |
+    第 9 章 ステートフルプロパティ。
+    生成したテンプレートどの部分に何を書かなければならないか。
+    実行するコマンドを生成する抽象的なモデルの段階と、実際のシステムを実行する現実の段階の両方で利用される関数がある。
+    そのためモデルに対する副作用を避けなければならない、とか。
+    Model-based Testing でも同じなんかな(特に調べた訳では無い)。
