--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -294,3 +294,12 @@
     実行するコマンドを生成する抽象的なモデルの段階と、実際のシステムを実行する現実の段階の両方で利用される関数がある。
     そのためモデルに対する副作用を避けなければならない、とか。
     Model-based Testing でも同じなんかな(特に調べた訳では無い)。
+- date: 2024-11-28
+  bookTitle: 魏武注孫子
+  pages: 17 ~ 22
+  notes: |
+    始計篇 第一。
+    「七計」主・将・天地・法令・兵衆・士卒・賞罰で以て、君主は将が五事を理解しているか測る。後ろ 3 つが五事になくてより具体化された項。
+    「将の任免」孫子にある計に従う将は必ず勝ち君主に重宝され、従わなければ必ず負け放逐される、みたいな感じ。
+    「計と勢」計によって有利であることがわかれば「勢」を加えて勝利の可能性を広げる、ということらしい。「勢」は春秋戦国時代に思索された概念で兵勢篇 第五で論じてるとのこと。
+    ここまでが合理的に勝敗を予想するくだりかな。
