--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -303,3 +303,11 @@
     「将の任免」孫子にある計に従う将は必ず勝ち君主に重宝され、従わなければ必ず負け放逐される、みたいな感じ。
     「計と勢」計によって有利であることがわかれば「勢」を加えて勝利の可能性を広げる、ということらしい。「勢」は春秋戦国時代に思索された概念で兵勢篇 第五で論じてるとのこと。
     ここまでが合理的に勝敗を予想するくだりかな。
+- date: 2024-11-28
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 217 ~ 230
+  notes: |
+    第 9 章 ステートフルプロパティ。
+    モデルの構築は利用者(運用者)の気持ちでメンタルモデルを構築するところから。
+    ここでは有効期限がないキャッシュのプロパティのモデルとして FIFO リストを利用している。
+    ステートレスプロパティ同様より単純な同じ振る舞いをするものを探し出して使うイメージか。
