--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -311,3 +311,11 @@
     モデルの構築は利用者(運用者)の気持ちでメンタルモデルを構築するところから。
     ここでは有効期限がないキャッシュのプロパティのモデルとして FIFO リストを利用している。
     ステートレスプロパティ同様より単純な同じ振る舞いをするものを探し出して使うイメージか。
+- date: 2024-11-29
+  bookTitle: 魏武注孫子
+  pages: 22 ~ 28
+  notes: |
+    始計篇 第一。
+    「兵は詭道」孫子においては戦争は騙し合いであるとする。これは敵の情勢に応じて変化するので先に伝えることはできないとする。
+    曹操はここに水のように常に変化することで敵に実情を探らせないのも詭道としている。
+    実例として白馬の戦いと烏桓遠征があるとしていて、これらはいずれも敵の不意をついたもの。
