--- a/contents/booklogs/2024/2024-11.yml
+++ b/contents/booklogs/2024/2024-11.yml
@@ -319,3 +319,14 @@
     「兵は詭道」孫子においては戦争は騙し合いであるとする。これは敵の情勢に応じて変化するので先に伝えることはできないとする。
     曹操はここに水のように常に変化することで敵に実情を探らせないのも詭道としている。
     実例として白馬の戦いと烏桓遠征があるとしていて、これらはいずれも敵の不意をついたもの。
+- date: 2024-11-30
+  bookTitle: 魏武注孫子
+  pages: 29 ~ 36
+  notes: |
+    始計篇 第一。
+    「戦わずに勝ちを定める」廟堂で占って戦争の吉凶を得ていたのを五事七計で勝算の多寡を測ることで置き換え、合理的に判断しようとした。
+    作戦篇 第二。孫子の中でもまとまりよく、一貫して長期戦を避けるべきと説く。
+    やむを得ず戦争になった場合はとにかく長引かせない。
+    短期戦でも膨大な費用がかかるので、敵から兵糧、兵や戦車といった戦力を奪うことの重要性を説く。
+    「一日ごとに千金」大規模な軍隊を遠方に兵糧を伴わせて戦うには莫大なコストを消費する。
+    実例として官渡の戦いで烏巣奇襲を挙げる。
