--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -7,3 +7,13 @@
     「食糧を奪う」一度戦争を始めたら再び徴兵したり自国から兵糧を送らせない。兵糧が不足すれば敵から奪う。
     「敵に勝って強さを増す」降伏した戦車を自軍に取り込み、降伏した兵を優遇し戦わせ、自軍を増強していく。
     「兵を知る将」国家に安寧をもたらすのは兵法を知る将である。
+- date: 2024-12-02
+  bookTitle: 魏武注孫子
+  pages: 46 ~ 50
+  notes: |
+    謀攻篇 第三。
+    孫子の原則の 1 つとして、戦わずに勝つのを理想とする。
+    孫子では、戦いを善悪で判断せず、ただ現実にあるものとしてその目的を突き詰めてゆく。
+    相手を自分に従わせることをその目的とし、なるべく傷つけずに従わせるを善しとする。
+    「戦わずに勝つ」百戦して百勝するのではなく国を丸ごと取るのを最善とする。これは孫子は戦争は不吉な道具であるとする老子の思想の影響下にあるため。
+    しかし曹操は中心都市を落とさなかったことで降伏した将に背かれ敗北した経験からか、中心都市を落とすことを「国を丸ごと取る」ことと解釈する。
