--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -17,3 +17,11 @@
     相手を自分に従わせることをその目的とし、なるべく傷つけずに従わせるを善しとする。
     「戦わずに勝つ」百戦して百勝するのではなく国を丸ごと取るのを最善とする。これは孫子は戦争は不吉な道具であるとする老子の思想の影響下にあるため。
     しかし曹操は中心都市を落とさなかったことで降伏した将に背かれ敗北した経験からか、中心都市を落とすことを「国を丸ごと取る」ことと解釈する。
+- date: 2024-12-02
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 231 ~ 240
+  notes: |
+    第 9 章 ステートフルプロパティ。
+    シーケンシャルな処理を自動的に並列実行に変換してテストしてくれる。その例。
+    FsCheck では並列実行する機能はあるけど自動で並列テスト化する機能はないような...
+    最先端はこういうことができるというレベルの認識で留めておくか。
