--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -25,3 +25,12 @@
     シーケンシャルな処理を自動的に並列実行に変換してテストしてくれる。その例。
     FsCheck では並列実行する機能はあるけど自動で並列テスト化する機能はないような...
     最先端はこういうことができるというレベルの認識で留めておくか。
+- date: 2024-12-03
+  bookTitle: 魏武注孫子
+  pages: 50 ~ 56
+  notes: |
+    謀攻篇 第三。
+    「謀を討つ」謀略の段階で敵を討てば戦わずに屈服させることができるとする。
+    孫子との思想としては戦う善しとしていない。本書はそこからも奇策で以て戦わずに勝利することを指すのが妥当であろうとする。
+    外交策・離間策で以て相手を屈するのを理想とするが、それが実現できない場合の次善の策としてなるべく早期の決着、やむを得ぬ場合の下策として城攻めを示している。
+    曹操はこれを敵が謀略を練り始めた段階に先制攻撃をかけることとと理解するが、それは赤壁の戦いで降伏に固執し黄蓋の偽降に敗れた経験による可能性を本書は示す。
