--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -34,3 +34,11 @@
     孫子との思想としては戦う善しとしていない。本書はそこからも奇策で以て戦わずに勝利することを指すのが妥当であろうとする。
     外交策・離間策で以て相手を屈するのを理想とするが、それが実現できない場合の次善の策としてなるべく早期の決着、やむを得ぬ場合の下策として城攻めを示している。
     曹操はこれを敵が謀略を練り始めた段階に先制攻撃をかけることとと理解するが、それは赤壁の戦いで降伏に固執し黄蓋の偽降に敗れた経験による可能性を本書は示す。
+- date: 2024-12-03
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 241 ~ 252
+  notes: |
+    第 10 章 ケーススタディ：書籍の貸し出しシステム。
+    現実のシステムのステートフルプロパティでテストする。
+    大局的な視点からはじめ、徐々に対称を絞り込み、最終的に決定論的で厳格なプロパティにする。
+    テスト対象となるコードの実装の節なので特になし。
