--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -42,3 +42,11 @@
     現実のシステムのステートフルプロパティでテストする。
     大局的な視点からはじめ、徐々に対称を絞り込み、最終的に決定論的で厳格なプロパティにする。
     テスト対象となるコードの実装の節なので特になし。
+- date: 2024-12-04
+  bookTitle: 魏武注孫子
+  pages: 56 ~ 62
+  notes: |
+    謀攻篇 第三。
+    「兵力差ごとの戦い方」孫子は彼我の兵力差によって戦力を変えるべきと説く。
+    これに対し、曹操は下邳で呂布を降伏させたことから将の能力次第で 10 倍どころか 2 倍でも包囲できると説くが、他の条件が揃ってのことなので参考にならないと後年批判されている。
+    「将と君主」君主は将を任命したら、将の判断を尊重すべきと説く。礼(仁義)を中心に置く国政と軍政では原理原則が違うため、君主は軍事に介入しないことが重要であるとする。
