--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -50,3 +50,11 @@
     「兵力差ごとの戦い方」孫子は彼我の兵力差によって戦力を変えるべきと説く。
     これに対し、曹操は下邳で呂布を降伏させたことから将の能力次第で 10 倍どころか 2 倍でも包囲できると説くが、他の条件が揃ってのことなので参考にならないと後年批判されている。
     「将と君主」君主は将を任命したら、将の判断を尊重すべきと説く。礼(仁義)を中心に置く国政と軍政では原理原則が違うため、君主は軍事に介入しないことが重要であるとする。
+- date: 2024-12-04
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 252
+  notes: |
+    第 10 章 ケーススタディ：書籍の貸し出しシステム。
+    大規模なシステムの検証はシステムに対して有効・無効なデータを把握するところから始まる。
+    まず広範囲なテストから始める。エラーの中にはステートレスプロパティが得意とする検査が引っかかることもあり、その場合は調査のためにステートレスプロパティを書くこともある。
+    早い話が E2E test なので sample のような DB 伴うものは TestContainers でも使わんとこれはめんどくさそうやな。
