--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -58,3 +58,12 @@
     大規模なシステムの検証はシステムに対して有効・無効なデータを把握するところから始まる。
     まず広範囲なテストから始める。エラーの中にはステートレスプロパティが得意とする検査が引っかかることもあり、その場合は調査のためにステートレスプロパティを書くこともある。
     早い話が E2E test なので sample のような DB 伴うものは TestContainers でも使わんとこれはめんどくさそうやな。
+- date: 2024-12-05
+  bookTitle: 魏武注孫子
+  pages: 63 ~ 65
+  notes: |
+    謀攻篇 第三。
+    「勝利の五つの条件」彼我の実情を把握しているか、兵の多寡による戦い方を知っているか、君臣が戦いの目的を等しくしているか、十分に準備をしてるか、君主が有能な将に裁量を任せているか。
+    曹操はこれを先にでた五事であるという。
+    「百戦して殆からず」このように彼我の実情を把握し、どう戦うか正確に判断すれば、何度戦っても危険はない。
+    この言葉は有名だし状況把握して正確な判断をしていれば～というくだりは理解していたけど、有能な将の裁量に任せているかというところは知らなかったので、新たな気づきかな。
