--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -67,3 +67,14 @@
     曹操はこれを先にでた五事であるという。
     「百戦して殆からず」このように彼我の実情を把握し、どう戦うか正確に判断すれば、何度戦っても危険はない。
     この言葉は有名だし状況把握して正確な判断をしていれば～というくだりは理解していたけど、有能な将の裁量に任せているかというところは知らなかったので、新たな気づきかな。
+- date: 2024-12-06
+  bookTitle: 魏武注孫子
+  pages: 66 ~ 71
+  notes: |
+    軍形篇 第四。
+    孫子は戦争には負けない形があるとする。その形とは軍の動静を見せない形と説く。(ここまでが前半)
+    形をとれば戦う前から処理は決まっている。何故それが分かるかは展開可能な兵力でもって彼我を比較するからとする。(ここが後半)
+    (見せない形とのつながりがよくわからないが？)
+    形が優位であれば水が低きに流れるように当たり前に勝つ。だが優勢な形を持たない場合は勝てないのか？で篇が終わる。
+    「負けない形」自軍にできるのは負けない形を取ることのみで、勝てるのは相手が負ける形(隙や油断ができたとき)である。
+    「形を隠す」敵が守って形を見せないときは勝てないが、敵が攻めに転じたときに形を見せれば勝てる(転じて攻めることが負けにつながることを曹操は示唆する)。
