--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -78,3 +78,11 @@
     形が優位であれば水が低きに流れるように当たり前に勝つ。だが優勢な形を持たない場合は勝てないのか？で篇が終わる。
     「負けない形」自軍にできるのは負けない形を取ることのみで、勝てるのは相手が負ける形(隙や油断ができたとき)である。
     「形を隠す」敵が守って形を見せないときは勝てないが、敵が攻めに転じたときに形を見せれば勝てる(転じて攻めることが負けにつながることを曹操は示唆する)。
+- date: 2024-12-07
+  bookTitle: 魏武注孫子
+  pages: 71 ~ 75
+  notes: |
+    軍形篇 第四。
+    「当たり前に勝つ」先述の通り勝つとわかった戦争で勝利するので、勝つことは優れたことではないとする。
+    これは先に上げた形で以て勝敗を廟算したからであるとする。
+    実例として官渡の戦いの袁紹と田豊の例を挙げる。
