--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -86,3 +86,11 @@
     「当たり前に勝つ」先述の通り勝つとわかった戦争で勝利するので、勝つことは優れたことではないとする。
     これは先に上げた形で以て勝敗を廟算したからであるとする。
     実例として官渡の戦いの袁紹と田豊の例を挙げる。
+- date: 2024-12-08
+  bookTitle: 魏武注孫子
+  pages: 75 ~ 78
+  notes: |
+    軍形篇 第四。
+    「形で勝つ」形とは度・量・数・称・勝、土地の収穫高を測り動かせる兵力を算出し彼我を比較して勝利に至る。
+    「明確な勝利に向けて」このため敵軍よりも有利な形を取れば明確に勝利を得られる。
+    要は物量的な話を述べているのが形、形成が不利でも勝利する事例に関しては「勢」で議論されているらしい。
