--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -94,3 +94,14 @@
     「形で勝つ」形とは度・量・数・称・勝、土地の収穫高を測り動かせる兵力を算出し彼我を比較して勝利に至る。
     「明確な勝利に向けて」このため敵軍よりも有利な形を取れば明確に勝利を得られる。
     要は物量的な話を述べているのが形、形成が不利でも勝利する事例に関しては「勢」で議論されているらしい。
+- date: 2024-12-09
+  bookTitle: 魏武注孫子
+  pages: 79 ~ 84
+  notes: |
+    兵勢篇 第五。
+    孫子は勢を巧みに用いることで弱い軍隊でも強い軍隊を破ることができると説く。
+    まず勢にふれる前に、始めに分数(数で部隊を分かつ)・形名(旗と鼓による指揮系統)・奇正(正面か不意をつくか)・虚実(空虚な軍か充実した軍か)を用兵上の重要な事項とする。
+    勢は怯と勇であるとし、怯えず勇気を出せば、強大な軍隊にも千仞の山から小石を転がすように勝てるとする(どうも士気でもなく、意図的偶発的な勢いの流れのようなもの)。
+    「用兵上の重要事項」曹操は奇正を、先に出撃して正面から戦うか、後から出撃して戦うかと注釈する。
+    「奇正の組み合わせ」正面から戦うか正により敵と会戦しながら、後から出撃する奇により相手の不備をつき勝利を抑える。
+    奇正の組み合わせは敵によって変化するため無数にある。
