--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -105,3 +105,19 @@
     「用兵上の重要事項」曹操は奇正を、先に出撃して正面から戦うか、後から出撃して戦うかと注釈する。
     「奇正の組み合わせ」正面から戦うか正により敵と会戦しながら、後から出撃する奇により相手の不備をつき勝利を抑える。
     奇正の組み合わせは敵によって変化するため無数にある。
+- date: 2024-12-09
+  bookTitle: 入門・倫理学
+  pages: 44 ~ 55
+  notes: |
+    輪読会のやつ。Ⅰ倫理学の基礎 第 2 章 倫理理論。
+    徳倫理。近代的な規範倫理学の理論的限界を打破するためアリストテレス倫理学への回帰。
+    人間が開花するために必要な性格の特徴。規範倫理学は道徳的性格に対処できない。
+    客観性が曖昧で、相対的である≒ルール化が難しいつまり規範的でない。
+    流れ的には徳(性格)→義務(行為)→功利主義(結果)。
+    第 3 章 権利論。
+    権利は法的な場面でよく用いられるが、倫理的議論の中でもよく用いられる。生存権など。
+    権利が侵害される場面＝人間の利益や価値が損なわれる場面で問題となる。
+    自由権、プライバシー権は自由権から派生する(他者を私的領域に踏み込ませない権利)。敵視的に自由はある主の抵抗権であった。
+    社会権(社会的基本権、生存権的基本権)。個人の生存や維持を国家に要求する権利。
+    歴史的に自由権により生じた様々な問題を是正するものとして社会権が重視されるようになった。
+    自由権は消極的権利「～からの自由」、社会権は積極的権利「～してもらう」
