--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -52,7 +52,7 @@
     「将と君主」君主は将を任命したら、将の判断を尊重すべきと説く。礼(仁義)を中心に置く国政と軍政では原理原則が違うため、君主は軍事に介入しないことが重要であるとする。
 - date: 2024-12-04
   bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
-  pages: 252
+  pages: 252 ~ 259
   notes: |
     第 10 章 ケーススタディ：書籍の貸し出しシステム。
     大規模なシステムの検証はシステムに対して有効・無効なデータを把握するところから始まる。
