--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -121,3 +121,17 @@
     社会権(社会的基本権、生存権的基本権)。個人の生存や維持を国家に要求する権利。
     歴史的に自由権により生じた様々な問題を是正するものとして社会権が重視されるようになった。
     自由権は消極的権利「～からの自由」、社会権は積極的権利「～してもらう」
+- date: 2024-12-10
+  bookTitle: 魏武注孫子
+  pages: 84 ~ 96
+  notes: |
+    兵勢篇 第五。
+    「勢とは何か」激しい水の流れが石を流すのは勢による。鷙鳥が獲物を仕留めるのは節による。
+    勢は弩の張り詰めた弦で、節は引き金を引く近さや瞬間のようなものであるとする。
+    「勢を生み出す勇」軍隊の強弱は形を決まる。勇怯が勢を決める。なお勇を起こすのは気であるらしい。
+    「権変により起こす勢」敵に見せかけの自軍の不備を見せて引き付け、本来の形により敵を待つ。
+    勝機を人に求めず権変により起こす勢に求める。
+    官渡の戦い「之を予へて、敵に必ず之を取らしむ」敵に利を与えその隙をつく。
+    合肥の戦い「能く人を択びて勢に任す」不利な形ながら奇襲をかけるという権変で勢を得て勝利する。
+    呉の平定「円石を千仞の山に転ずるが如き者は、勢なり」形と勢の両方で優越したものは竹が自ら割れていくかの如く勢が止まることがない。
+    「破竹の勢い」はこの杜預の言葉を起源とする。
