--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -135,3 +135,14 @@
     合肥の戦い「能く人を択びて勢に任す」不利な形ながら奇襲をかけるという権変で勢を得て勝利する。
     呉の平定「円石を千仞の山に転ずるが如き者は、勢なり」形と勢の両方で優越したものは竹が自ら割れていくかの如く勢が止まることがない。
     「破竹の勢い」はこの杜預の言葉を起源とする。
+- date: 2024-12-10
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 260 ~ 270
+  notes: |
+    第 10 章 ケーススタディ：書籍の貸し出しシステム。
+    モデルを使ったテストをする方法として shim (詰め木)と呼ばれる通常の操作を wrap するモジュールを使う。
+    shim を使ってプロパティを組み立てる。状態に依存する処理とそうでない処理のコマンドの生成は分ける。
+    shim 、前提条件、状態を進める処理、事後条件の定義は繰り返しが多くなりがち。
+    それは簡潔さと自明であることの良い兆候である。
+    決定論的なモデルを記述するのが難しかったり、事後条件で登録したデータを検証しにくかったりする場合、
+    それはシステムの可観測性など開発の方法を見直す機会しれないというシグナルであると。
