--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -152,10 +152,10 @@
   notes: |
     虚実篇 第六。
     先手を打って戦いの準備を整えておくのが実、後手に回り準備が至らないのが虚。敵を虚に追いこめば勝てる。
-    更に高次になる？と自ら虚になり、虚になった軍は無形・無声となる。
+    更に高次になる(策によって？)と自ら虚になり、虚になった軍は無形・無声となる。
     無形となった軍は情勢が漏れず敵に把握できなくなる。敵に形を表させ自軍は少数であってもどこからでも攻められ、勝利する。
     敵を無形にさせないためには、敵の情報を知る必要がある。そのため策略をめぐらし敵の形をあらわにする。
     無形は形の極致であり、間者にも智者にも見抜けない。
-    兵の形を水のように常形・常勢を持たせないためには、敵の形に対応できる神の力を持った将が必要となる。
+    軍の形を水のように常形・常勢を持たせないためには、敵の形に対応できる神(策に長けた？)の力を持った将が必要となる。
     孫子は形・勢・虚実で臨機応変な戦法を組み立てて勝利するととく。
     「虚と実」敵に利を与えるか急所を攻めれば、敵は実から虚に追い込める。
