--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -159,3 +159,12 @@
     軍の形を水のように常形・常勢を持たせないためには、敵の形に対応できる神(策に長けた？)の力を持った将が必要となる。
     孫子は形・勢・虚実で臨機応変な戦法を組み立てて勝利するととく。
     「虚と実」敵に利を与えるか急所を攻めれば、敵は実から虚に追い込める。
+- date: 2024-12-11
+  bookTitle: 実践プロパティベーステスト PropEr と Erlang/Elixir ではじめよう
+  pages: 270 ~ 278
+  notes: |
+    第 10 章 ケーススタディ：書籍の貸し出しシステム。
+    わざわざ失敗するようテストを書いてリリース前にバグを「減らす」(時間とともにバグは必ず見つかる)。
+    また PBT は確率的なテストなためプロパティ再実行のたびに違うエラーが見つかることもある。
+    モデルによっては実際のシステムが受け付けるパターンと違う場合がある(例えばエスケープが必要な文字)。
+    その場合はプロパティで検証したいことによってプロパティを分けるべき。
