--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -168,3 +168,13 @@
     また PBT は確率的なテストなためプロパティ再実行のたびに違うエラーが見つかることもある。
     モデルによっては実際のシステムが受け付けるパターンと違う場合がある(例えばエスケープが必要な文字)。
     その場合はプロパティで検証したいことによってプロパティを分けるべき。
+- date: 2024-12-12
+  bookTitle: 魏武注孫子
+  pages: 101 ~ 104
+  notes: |
+    虚実篇 第六。
+    「虚の効用」敵の虚(敵がいないとこを行軍し守っていない所)を攻める。
+    よく攻めよく守るものは情勢が漏れず敵からすれば掴みどころがなく無形・無声(変幻自在で気配もない)となり敵の命運を掌握できる。
+    「無形」は形がなくなるのではなく、途方もなく大きく変幻自在であり、常なる形がないという意味。黄老思想を背景とする。
+    「無声」は気配がないこと。老子十四章。
+    事例は蜀漢滅亡。
