--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -178,3 +178,14 @@
     「無形」は形がなくなるのではなく、途方もなく大きく変幻自在であり、常なる形がないという意味。黄老思想を背景とする。
     「無声」は気配がないこと。老子十四章。
     事例は蜀漢滅亡。
+- date: 2024-12-13
+  bookTitle: 魏武注孫子
+  pages: 104 ~ 110
+  notes: |
+    虚実篇 第六。
+    「無形の防御」敵の虚をつくことを hit and away のようにとく。
+    敵の守らなけれなならまい所をつくことで、敵は守りを固めた陣を離れ戦わねばならない。
+    敵に疑わせることで、攻めたい所に攻めさせない。
+    「無形の攻撃」自軍が無形であれば敵は兵力を分散せねばならず、自軍の兵力を集中して敵の少数の部隊を圧倒できる。
+    「敵の情報を知る」勝ちをなすには、敵の情報を知り、策略で以て敵の形をあらわにする。
+    曹操は、軍形篇では為すことができないととかれた勝利を、戦う日時や地形を知ることによって敵への抑止力となり、敵に戦いを仕掛けられないようにできると解釈した。
