--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -189,3 +189,14 @@
     「無形の攻撃」自軍が無形であれば敵は兵力を分散せねばならず、自軍の兵力を集中して敵の少数の部隊を圧倒できる。
     「敵の情報を知る」勝ちをなすには、敵の情報を知り、策略で以て敵の形をあらわにする。
     曹操は、軍形篇では為すことができないととかれた勝利を、戦う日時や地形を知ることによって敵への抑止力となり、敵に戦いを仕掛けられないようにできると解釈した。
+- date: 2024-12-14
+  bookTitle: 魏武注孫子
+  pages: 111 ~ 114
+  notes: |
+    虚実篇 第六。
+    「無形になるには」無形であれば熟練の間者や智者にもはかれない。
+    勝利したときの形は知れど勝利を制した形は無形であるので知る者はいない。
+    これは形が敵に応じて限りなく変化するためである。
+    「無形と水」軍の形は水に似る。水が高きから低きに流れるように、軍は実を避けて虚を攻める。
+    水は地により流れを定め、兵は的により勝ちを定める。このように敵に応じて勝利を得るものを神(しん、人智を超える働き・法則)という。
+    よくわからなかった「神」を理解できた。
