--- a/contents/booklogs/2024/2024-12.yml
+++ b/contents/booklogs/2024/2024-12.yml
@@ -200,3 +200,15 @@
     「無形と水」軍の形は水に似る。水が高きから低きに流れるように、軍は実を避けて虚を攻める。
     水は地により流れを定め、兵は的により勝ちを定める。このように敵に応じて勝利を得るものを神(しん、人智を超える働き・法則)という。
     よくわからなかった「神」を理解できた。
+- date: 2024-12-15
+  bookTitle: 魏武注孫子
+  pages: 115 ~ 118
+  notes: |
+    軍争篇 第七。
+    軍争(敵と勝利を争うこと)は、敵に先んじて有利な地を得ることである。これには「迂直の計」を用いる。
+    魏武注ではそれを敵軍に自軍が遠くにいるように見せかけ先手を打つこととする(詭道である)。
+    敵よりも遅く出発しながらも先に有利な地を占めるには、地の利を得てなるべく長い距離を移動しない。
+    風林火山陰雷霆を実現するには兵を統率し一つにする。
+    加えて軍の朝昼夜の気に留意し、犯してはならない戦いの禁忌を示す。
+    「有利な地を占める」戦争の中、将が命を受け軍を編成し敵と対峙して宿営するまでで、先に有利な地を占め勝ちを争う≒軍争ほど難しいことはない。
+    軍曹の難しさは、(策略によって)敵軍には自軍を遠くにいるように見せかけ油断させて利とするところにある。敵より遅く出て先に到着するのを遠近の計(迂直の計)を知る者である。
